# Knn-Implementation-Cpp

./: CMakeLists.txt  README.md  README.txt
Classify/include/: Knn.h  ReadFeatures.h
Classify/src/: main.cpp
GenFeatures/: genFeatures
GenFeatures/include/: Data.h  Image.h
GenFeatures/src/: Data.cpp  main.cpp
Knn/: README.txt
Knn/include/: .nfs0000000002b8b1f300000082  FeatureVector.h  Knn.h  Matrix.h
